# cheatcode

./: .gitignore  LICENSE-Apache-2.0  NOTICE  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  docker-compose.yml  main.py  projects_threads_api.py  pyproject.toml  run_agent_background.py  sentry.py  worker_health.py  worker_service.py
backend/agent/: api.py  coding_agent_prompt.py  mobile_agent_prompt.py  run.py  run_agent.py  utils.py
backend/agent/sample_responses/: 1.txt
backend/agent/tools/: completion_tool.py  component_search_tool.py  custom_mcp_handler.py  mcp_tool_executor.py  mcp_tool_wrapper.py  sb_expose_tool.py  sb_files_tool.py  sb_shell_tool.py  sb_vision_tool.py  web_search_tool.py
backend/agentpress/: context_manager.py  response_processor.py  thread_manager.py  tool.py
backend/api/webhooks/: dodopayments.py
backend/deployments/: api.py
backend/flags/: flags.py
backend/mcp_service/: api.py  client.py  mcp_providers.py
backend/pipedream/: api.py  client.py  profiles.py
backend/sandbox/: README.md  api.py  sandbox.py  sandbox_pool.py  tool_base.py
backend/sandbox/docker/: Dockerfile.cheatcode-mobile  Dockerfile.cheatcode-one  context.tar
backend/services/: api_key_resolver.py  billing.py  dodopayments.py  email.py  langfuse.py  llm.py  openrouter_pricing.py  redis.py  supabase.py  token_billing.py  user_openrouter_keys.py
backend/services/docker/: redis.conf
backend/supabase/: config.toml
backend/utils/: auth_utils.py  concurrency_monitor.py  config.py  constants.py  files_utils.py  health_check.py  payment_methods.py  qr_extractor.py
(+186 files in other folders)
